--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3'
 services:
   firstang:
     image: tanisha364/angularapp
+    container_name: angular
+    network_mode: tanisha
     ports:
       - "4200:4200"
     volumes:
